# DISK

./: .gitignore  AUDIT_REPORT_RU.md  AUDIT_REPORT_v2.3.0_RU.docx  AUDIT_REPORT_v2.3.0_RU.md  CLAUDE.md  DISK_Diagnostic_Review.md  README.md  README_RU.md  Roadmap.txt  SMART_KINGSTON_SKC300S37A60G_20260326_153045 1.txt  SMART_KINGSTON_SKC600256G_20260417_204223.txt  SMART_NVMe_SK_hynix_BC511_HFM256GDJTNI-82A0A_20260427_123810.txt  SMART_ST1000LM014-1EJ164_20260406_225204.txt  SSD_TESTING_SPEC.md  cli.py  pyproject.toml  remarks_for_devs_nvme_smart.md  run.py  Исправление вычисления Power-On-Hours для контроллеров SandForce.docx
.claude/: settings.local.json
disk_diag/: __init__.py  app.py  i18n.py
disk_diag/core/: benchmark.py  constants.py  drive_enumerator.py  error_log.py  health_assessor.py  history.py  models.py  self_test.py  smart_ata.py  smart_nvme.py  smart_usb_nvme.py  structures.py  surface_scan.py  winapi.py
disk_diag/data/: baselines.py  nvme_fields.py  smart_db.py  vendor_profiles.py
disk_diag/gui/: benchmark_panel.py  confirm_dialog.py  drive_selector.py  errorlog_panel.py  health_indicator.py  info_panel.py  main_window.py  selftest_panel.py  smart_table.py  surface_panel.py  theme.py
docs/: DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_RU.md  HOW_IT_WORKS.md  HOW_IT_WORKS_RU.md  SandForce_POH_Issue.md  USER_GUIDE.md  USER_GUIDE_RU.md  nvme_smart_methods.md  Оценка ТЗ на ПО для корректного тестирования SSD и рекомендации по доработке.docx  Техническое задание на ПО для корректного тестирования SSD по методологиям SNIA и JEDEC с учётом пра.docx
(+2 files in other folders)
